base/platform/setup/envoy-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
  namespace: platform
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: main-gateway
  namespace: platform
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
    # - name: https
    #   protocol: HTTPS
    #   port: 443
    #   tls:
    #     mode: SIMPLE
    #     certificateRefs:
    #       - kind: Secret
    #         name: eg-tls-secret
    #         group: ""
